feat: remove workshop booking feature
